// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField is disabled 1`] = `
<div
  class="root disabled"
>
  <span>
    <div
      class="inputWrapper"
    >
      <span>
        true
      </span>
    </div>
  </span>
</div>
`;

exports[`FormField renders an input element 1`] = `
<div
  class="root"
>
  <span>
    <div
      class="inputWrapper"
    >
      <input
        class="render-prop"
      />
    </div>
  </span>
</div>
`;

exports[`FormField renders correctly 1`] = `
<div
  class="root"
>
  <span>
    <div
      class="inputWrapper"
    >
      <div
        class="render-prop"
      />
    </div>
  </span>
</div>
`;

exports[`FormField renders with an error 1`] = `
<div
  class="root errored"
>
  <span>
    <div
      class="inputWrapper"
    >
      <div
        class="render-prop"
      />
    </div>
  </span>
</div>
`;

exports[`FormField renders with label 1`] = `
<div
  class="root"
>
  <label
    aria-hidden="true"
    class="label"
    role="presentation"
  >
    Add a Label
  </label>
  <span>
    <div
      class="inputWrapper"
    >
      <div
        class="render-prop"
      />
    </div>
  </span>
</div>
`;
